--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClCompile Include="src\utility\console.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\reporting\err_msg.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\reporting\err_stream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -67,6 +64,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\semantics\unifier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\reporting\msg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -140,9 +140,6 @@
     <ClInclude Include="src\utility\math.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\reporting\err_msg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\reporting\err_stream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -174,6 +171,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\semantics\unifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\reporting\msg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
