--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -123,9 +123,13 @@
     <ClCompile Include="src\lexer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ast.h" />
+    <ClInclude Include="src\ast_expr.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\file_hnd.h" />
     <ClInclude Include="src\lexer.h" />
+    <ClInclude Include="src\parselet.h" />
+    <ClInclude Include="src\parser.h" />
     <ClInclude Include="src\position.h" />
     <ClInclude Include="src\str_utils.h" />
     <ClInclude Include="src\token.h" />
