--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -137,6 +137,8 @@
     <ClCompile Include="src\io\code_formatter.cpp" />
     <ClCompile Include="src\io\file_hnd.cpp" />
     <ClCompile Include="src\syntax\lexer.cpp" />
+    <ClCompile Include="src\syntax\token_state.cpp" />
+    <ClCompile Include="src\syntax\token_stream.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\semantics\scope.h" />
@@ -155,6 +157,7 @@
     <ClInclude Include="src\syntax\ast_pat.h" />
     <ClInclude Include="src\syntax\ast_stmt.h" />
     <ClInclude Include="src\syntax\ast_ty.h" />
+    <ClInclude Include="src\syntax\combinator\atomic.h" />
     <ClInclude Include="src\syntax\lexer.h" />
     <ClInclude Include="src\math.h" />
     <ClInclude Include="src\syntax\parselet.h" />
@@ -162,6 +165,8 @@
     <ClInclude Include="src\syntax\position.h" />
     <ClInclude Include="src\str_utils.h" />
     <ClInclude Include="src\syntax\token.h" />
+    <ClInclude Include="src\syntax\token_state.h" />
+    <ClInclude Include="src\syntax\token_stream.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
