--- a/YCompiler/YCompiler.vcxproj.filters
+++ b/YCompiler/YCompiler.vcxproj.filters
@@ -62,5 +62,11 @@
     <ClInclude Include="src\syntax\token_input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\syntax\parser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\syntax\combinator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
