Started grammar parsing

--- a/YCompiler/YCompiler.vcxproj
+++ b/YCompiler/YCompiler.vcxproj
@@ -121,6 +121,8 @@
     <ClInclude Include="src\io\file_hnd.h" />
     <ClInclude Include="src\io\fmt_code.h" />
     <ClInclude Include="src\math.h" />
+    <ClInclude Include="src\syntax\ast.h" />
+    <ClInclude Include="src\syntax\ast_stmt.h" />
     <ClInclude Include="src\syntax\combinator.h" />
     <ClInclude Include="src\syntax\lexer.h" />
     <ClInclude Include="src\syntax\parser.h" />
@@ -134,6 +136,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\io\file_hnd.cpp" />
     <ClCompile Include="src\syntax\lexer.cpp" />
+    <ClCompile Include="src\syntax\parser.cpp" />
     <ClCompile Include="src\syntax\position.cpp" />
     <ClCompile Include="src\syntax\token.cpp" />
     <ClCompile Include="src\syntax\token_input.cpp" />
