--- a/YCompiler/YCompiler.vcxproj
+++ b/YCompiler/YCompiler.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="src\math.h" />
     <ClInclude Include="src\syntax\ast.h" />
     <ClInclude Include="src\syntax\ast_expr.h" />
+    <ClInclude Include="src\syntax\ast_pat.h" />
     <ClInclude Include="src\syntax\ast_printer.h" />
     <ClInclude Include="src\syntax\ast_stmt.h" />
     <ClInclude Include="src\syntax\ast_ty.h" />
@@ -140,6 +141,7 @@
     <ClCompile Include="src\io\file_hnd.cpp" />
     <ClCompile Include="src\syntax\ast.cpp" />
     <ClCompile Include="src\syntax\ast_expr.cpp" />
+    <ClCompile Include="src\syntax\ast_pat.cpp" />
     <ClCompile Include="src\syntax\ast_stmt.cpp" />
     <ClCompile Include="src\syntax\ast_ty.cpp" />
     <ClCompile Include="src\syntax\lexer.cpp" />
