--- a/YCompiler/YCompiler.vcxproj.filters
+++ b/YCompiler/YCompiler.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\syntax\ast_pat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\io\ast_printer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -92,9 +95,6 @@
     <ClInclude Include="src\syntax\ast_stmt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\syntax\ast_printer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\syntax\ast_expr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -108,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\syntax\ast_pat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\io\ast_printer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
