--- a/YCompiler/YCompiler.vcxproj
+++ b/YCompiler/YCompiler.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="src\io\file_hnd.h" />
     <ClInclude Include="src\io\fmt_code.h" />
     <ClInclude Include="src\math.h" />
+    <ClInclude Include="src\semantics\scope.h" />
     <ClInclude Include="src\semantics\symbol.h" />
     <ClInclude Include="src\semantics\type.h" />
     <ClInclude Include="src\semantics\unifier.h" />
@@ -143,6 +144,8 @@
     <ClCompile Include="src\io\fmt_code.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\io\file_hnd.cpp" />
+    <ClCompile Include="src\semantics\scope.cpp" />
+    <ClCompile Include="src\semantics\symbol.cpp" />
     <ClCompile Include="src\semantics\type.cpp" />
     <ClCompile Include="src\semantics\unifier.cpp" />
     <ClCompile Include="src\syntax\ast.cpp" />
